--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(libcvd)
 
-add_executable(cvd-fast9 src/cvd_fast9.cpp)
-target_link_libraries(cvd-fast9 PUBLIC CVD)
-target_include_directories(cvd-fast9 PUBLIC src libcvd)
+add_executable(test-fast9 "src/main.cpp")
+target_link_libraries(test-fast9 PUBLIC CVD)
+target_include_directories(test-fast9 PUBLIC src libcvd)
