Fixed build errors on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 if(MSVC)
     add_compile_options(/arch:AVX2)
 else()
-    add_compile_options(/march:skylake)
+    add_compile_options(-march=skylake)
 endif()
 
 
