avx512 with compressstore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,15 @@ project(CD)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(AVX512 TRUE)
+
 if(MSVC)
     add_compile_options(/arch:AVX2)
+endif()
+
+if(AVX512)
+    add_compile_definitions(AVX512_ENABLED)
+    add_compile_options(-march=native)
 else()
     add_compile_options(-march=skylake)
 endif()
@@ -12,7 +19,7 @@ endif()
 
 add_subdirectory(libcvd)
 
-set(Sources  "src/fast9_scalar.cpp" "src/fast9_sse2.cpp" "src/fast9_if.cpp" "src/fast10_scalar.cpp" "src/fastX_slow.cpp" "src/fast10_sse2.cpp" "src/fast10_avx2.cpp" "src/utils.cpp")
+set(Sources  "src/fast9_scalar.cpp" "src/fast9_sse2.cpp" "src/fast9_if.cpp" "src/fast10_scalar.cpp" "src/fastX_slow.cpp" "src/fast10_sse2.cpp" "src/fast10_avx2.cpp" "src/fast10_avx512.cpp" "src/utils.cpp")
 add_executable(test-fast9 "src/main.cpp" ${Sources})
 target_link_libraries(test-fast9 PUBLIC CVD)
 target_include_directories(test-fast9 PUBLIC src libcvd)
@@ -23,4 +30,4 @@ target_include_directories(test-vtune PUBLIC src libcvd)
 target_compile_definitions(test-vtune PUBLIC COUNT_CHECKS=false PEELING_ENABLED=false)
 
 
-message(${CMAKE_CXX_FLAGS_RELEASE})
+message("release flags" ${CMAKE_CXX_FLAGS_RELEASE})
