Added function in main.cpp to generate output file with lane checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 
 add_subdirectory(libcvd)
 
-set(Sources  "src/fast9_scalar.cpp" "src/fast9_sse2.cpp" "src/fast9_if.cpp" "src/fast10_scalar.cpp" "src/fastX_slow.cpp" "src/fast10_sse2.cpp" "src/fast10_avx2.cpp" "src/fast10_avx2_unrolled_2.cpp" "src/fast10_avx2_unrolled_3.cpp" "src/fast10_scalar_block.cpp" "src/fast10_avx512.cpp" "src/utils.cpp")
+set(Sources  "src/fast9_scalar.cpp" "src/fast9_sse2.cpp" "src/fast9_if.cpp" "src/fast10_scalar.cpp" "src/fastX_slow.cpp" "src/fast10_sse2.cpp" "src/fast10_avx2.cpp" "src/fast10_avx2_unrolled_2.cpp" "src/fast10_avx2_unrolled_3.cpp" "src/fast10_avx2_vecpeeling.cpp" "src/fast10_avx2_vecpeeling_mask.cpp" "src/fast10_avx2_checkposition.cpp" "src/fast10_scalar_block.cpp" "src/fast10_avx512.cpp" "src/utils.cpp")
 add_executable(test-fast9 "src/main.cpp" ${Sources})
 target_link_libraries(test-fast9 PUBLIC CVD)
 target_include_directories(test-fast9 PUBLIC src libcvd)
